Refactor UI components and styles in BuceadorView.fxml and style.css
- Updated styles for form and table components to improve UI consistency.
- Removed unused search box styles and adjusted padding for better layout.
- Enhanced table view with fixed cell sizes and improved alignment.
- Modified FXML structure for better readability and maintainability.
- Added ComboBox for blood type selection and adjusted labels for clarity.
- Ensured all text fields and labels are properly aligned and styled.